# node_engine

./: Cargo.toml  TODO.txt  rust-toolchain
benches/: node_graph.rs
examples/: compile_shader.rs  external_nodes.rs  large_graph.rs  test_graph_ui.rs
src/: color.rs  compile.rs  eval.rs  graph.rs  group.rs  input.rs  lib.rs  macros.rs  node.rs  nodes.rs  parameters.rs  registry.rs  values.rs
src/nodes/: basic.rs  channel.rs  math.rs  shader.rs
src/ui/: frame.rs  mod.rs  zoom.rs
src/values/: bindings.rs  matrix.rs  scalar.rs  texture.rs  types.rs  vector.rs
